Adds survey page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,17 @@
----
-layout: main
----
+<!doctype HTML>
 
-New site coming soon...
+<html>
+  <head>
+    <link href='http://fonts.googleapis.com/css?family=Droid+Serif:700|Open+Sans:300,600' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" type="css" href="/style/site.css" />
+  </head>
+</html>
+
+<body>
+  <section>
+    <h2>Things</h2>
+    <ol>
+      <li><a href="/progrelig14.html">2014 Programmers and Religion Survey</a></li>
+    </ol>
+  </section>
+</body>
