--- a/progrelig14.html
+++ b/progrelig14.html
@@ -4,6 +4,7 @@
   <head>
     <link href='http://fonts.googleapis.com/css?family=Droid+Serif:700|Open+Sans:300,600' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="css" href="/style/site.css">
+    <title>2014 Programmers and Religion Survey</title>
   </head>
 </html>
 
