clarifies the status section

--- a/progrelig14.html
+++ b/progrelig14.html
@@ -14,14 +14,14 @@
   </header>
 
   <section class="note">
-    <h3>Status</h3>
+    <h3>Status:</h3>
+
+    <p><a href="https://docs.google.com/forms/d/1V-eXoUcTe1JfugAURUwFZ_UXiONNba-xdd8o8NF1E6c/viewform">Please take the survey here.</a></p>
 
     <p>
-      <a href="https://docs.google.com/forms/d/1V-eXoUcTe1JfugAURUwFZ_UXiONNba-xdd8o8NF1E6c/viewform">
-        The Google Docs form
-      </a> is open for responses until Friday May 2, 2014. After that
-      point, I will do final analysis and publish the results at a
-      page on this site.
+      The Google Docs form will be open for responses until Friday May
+       2, 2014. After that point, I will do final analysis and publish
+       the results at a page on this site.
     </p>
   </section>
 
