--- a/progrelig14.html
+++ b/progrelig14.html
@@ -14,7 +14,7 @@
   </header>
 
   <section class="note">
-    <h3>Status:</h3>
+    <h3>Status: Open</h3>
 
     <p><a href="https://docs.google.com/forms/d/1V-eXoUcTe1JfugAURUwFZ_UXiONNba-xdd8o8NF1E6c/viewform">Please take the survey here.</a></p>
 
