--- a/progrelig14.html
+++ b/progrelig14.html
@@ -2,27 +2,30 @@
 
 <html>
   <head>
+    <meta charse=utf-8>
     <link href='http://fonts.googleapis.com/css?family=Droid+Serif:700|Open+Sans:300,600' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="css" href="/style/site.css">
+    <link rel="stylesheet" type="text/css" href="/style/site.css">
     <title>2014 Programmers and Religion Survey</title>
   </head>
 </html>
 
 <body>
   <header>
-    <h1><a href="/">home</a> / 2014 Programmers and Religion Survey</h1>
+    <h1>2014 Programmers and Religion Survey</h1>
   </header>
 
   <section class="note">
-    <h3>Status: Open</h3>
-
-    <p><a href="https://docs.google.com/forms/d/1V-eXoUcTe1JfugAURUwFZ_UXiONNba-xdd8o8NF1E6c/viewform">Please take the survey here.</a></p>
-
-    <p>
-      The Google Docs form will be open for responses until Friday May
-       2, 2014. After that point, I will do final analysis and publish
-       the results at a page on this site.
-    </p>
+    <div class="inner-container">
+      <h3>Status: Open</h3>
+      
+      <p><a href="https://docs.google.com/forms/d/1V-eXoUcTe1JfugAURUwFZ_UXiONNba-xdd8o8NF1E6c/viewform">Please take the survey here.</a></p>
+      
+      <p>
+        The Google Docs form will be open for responses until Friday May
+        2, 2014. After that point, I will do final analysis and publish
+        the results at a page on this site.
+      </p>
+    </div>
   </section>
 
   <section>
