--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <link href='http://fonts.googleapis.com/css?family=Droid+Serif:700|Open+Sans:300,600' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="css" href="/style/site.css" />
+    <link rel="stylesheet" type="text/css" href="/style/site.css">
   </head>
 </html>
 
