--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
-<!doctype HTML>
+---
+layout: main
+title: Home
+---
 
-<html>
-  <head>
-    <link href='http://fonts.googleapis.com/css?family=Droid+Serif:700|Open+Sans:300,600' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="/style/site.css">
-  </head>
-</html>
+<section>
+  <p>Hello, my name is John Cromartie.</p>
 
-<body>
-  <section>
-    <h2>Things</h2>
-    <ol>
-      <li><a href="/progrelig14.html">2014 Programmers and Religion Survey</a></li>
-    </ol>
-  </section>
-</body>
+  <p>This is my personal home page, which is (intended to be) the home
+    of information about my various interests and side projects.</p>
+</section>
+
+<section>
+  <h2>Things</h2>
+  <ol>
+    <li><a href="/progrelig14.html">2014 Programmers and Religion Survey</a></li>
+  </ol>
+</section>
