Updates survey status

--- a/progrelig14.html
+++ b/progrelig14.html
@@ -9,14 +9,12 @@ title: 2014 Programmers and Religion Survey
 
 <section class="note">
   <div class="inner-container">
-    <h3>Status: Open</h3>
-    
-    <p><a href="https://docs.google.com/forms/d/1V-eXoUcTe1JfugAURUwFZ_UXiONNba-xdd8o8NF1E6c/viewform">Please take the survey here.</a></p>
+    <h3>Status: Closed</h3>
     
     <p>
-      The Google Docs form will be open for responses until Friday May
-      2, 2014. After that point, I will do final analysis and publish
-      the results at a page on this site.
+      I am currently preparing an analysis of the results. I will post
+      this analysis, along with a link to the raw data, as soon as it
+      is ready, which should be before Friday, 13 May 2014.
     </p>
   </div>
 </section>
