Reword index page

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@ title: Home
 <section>
   <p>Hello, my name is John Cromartie.</p>
 
-  <p>This is my personal home page, which is (intended to be) the home
-    of information about my various interests and side projects.</p>
+  <p>This is (supposed to be) a place for information about my various
+    interests and side projects.</p>
 </section>
 
 <section>
