Removes overly-optimistic due date

--- a/progrelig14.html
+++ b/progrelig14.html
@@ -14,7 +14,7 @@ title: 2014 Programmers and Religion Survey
     <p>
       I am currently preparing an analysis of the results. I will post
       this analysis, along with a link to the raw data, as soon as it
-      is ready, which should be before Friday, 13 May 2014.
+      is ready.
     </p>
   </div>
 </section>
