--- a/index.html
+++ b/index.html
@@ -1,18 +1,14 @@
----
-layout: main
-title: Home
----
-
-<section>
-  <p>Hello, my name is John Cromartie.</p>
-
-  <p>This is (supposed to be) a place for information about my various
-    interests and side projects.</p>
-</section>
-
-<section>
-  <h2>Things</h2>
-  <ol>
-    <li><a href="/progrelig14.html">2014 Programmers and Religion Survey</a></li>
-  </ol>
-</section>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="css/style.css" rel="stylesheet" type="text/css">
+    <link rel="icon" href="https://clojurescript.org/images/cljs-logo-icon-32.png">
+  </head>
+  <body>
+    <div id="app">
+    </div> <!-- end of app div -->
+    <script src="cljs-out/dev-main.js" type="text/javascript"></script>
+  </body>
+</html>
